Added double quote for DomainAdminPassword

--- a/templates/Template_1_AD_2012.template
+++ b/templates/Template_1_AD_2012.template
@@ -924,11 +924,11 @@
                                                 "Ref": "DomainDNSName"
                                             },
                                             " ",
-                                            "-AccountPassword (ConvertTo-SecureString ",
+                                            "-AccountPassword (ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force) ",
+                                            "\" -AsPlainText -Force) ",
                                             "-Enabled $true ",
                                             "-PasswordNeverExpires $true\""
                                         ]
@@ -1359,11 +1359,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
@@ -1405,17 +1405,17 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-SafeModeAdministratorPassword ",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force) ",
+                                            "\" -AsPlainText -Force) ",
                                             "-Confirm:$false -Force\""
                                         ]
                                     ]
@@ -1501,11 +1501,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "\""
                                         ]
                                     ]
@@ -1735,11 +1735,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
@@ -2004,11 +2004,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
