--- a/templates/Template_3_AD_2012R2.template
+++ b/templates/Template_3_AD_2012R2.template
@@ -756,11 +756,11 @@
                                             },
                                             "\\admin",
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
@@ -1002,11 +1002,11 @@
                                             },
                                             "\\admin",
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
