--- a/templates/Template_1_AD_2012R2.template
+++ b/templates/Template_1_AD_2012R2.template
@@ -895,11 +895,11 @@
                                                 "Ref": "DomainDNSName"
                                             },
                                             " ",
-                                            "-SafeModeAdministratorPassword (ConvertTo-SecureString ",
+                                            "-SafeModeAdministratorPassword (ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force) ",
+                                            "\" -AsPlainText -Force) ",
                                             "-DomainMode Win2012R2 ",
                                             "-DomainNetbiosName ",
                                             {
@@ -946,11 +946,11 @@
                                                 "Ref": "DomainDNSName"
                                             },
                                             " ",
-                                            "-AccountPassword (ConvertTo-SecureString ",
+                                            "-AccountPassword (ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force) ",
+                                            "\" -AsPlainText -Force) ",
                                             "-Enabled $true ",
                                             "-PasswordNeverExpires $true\""
                                         ]
@@ -1361,11 +1361,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
@@ -1407,17 +1407,17 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-SafeModeAdministratorPassword ",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force) ",
+                                            "\" -AsPlainText -Force) ",
                                             "-Confirm:$false -Force\""
                                         ]
                                     ]
@@ -1503,11 +1503,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "\""
                                         ]
                                     ]
@@ -1737,11 +1737,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
@@ -2006,11 +2006,11 @@
                                                 "Ref": "DomainAdminUser"
                                             },
                                             "',",
-                                            "(ConvertTo-SecureString ",
+                                            "(ConvertTo-SecureString \"",
                                             {
                                                 "Ref": "DomainAdminPassword"
                                             },
-                                            " -AsPlainText -Force))) ",
+                                            "\" -AsPlainText -Force))) ",
                                             "-Restart\""
                                         ]
                                     ]
